# serializer version: 1
# name: test_browse_media_categories
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
        'media_content_type': 'spotify://current_user_playlists',
        'thumbnail': None,
        'title': 'Playlists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ARTIST: 'artist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_followed_artists',
        'media_content_type': 'spotify://current_user_followed_artists',
        'thumbnail': None,
        'title': 'Artists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_albums',
        'media_content_type': 'spotify://current_user_saved_albums',
        'thumbnail': None,
        'title': 'Albums',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_tracks',
        'media_content_type': 'spotify://current_user_saved_tracks',
        'thumbnail': None,
        'title': 'Tracks',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_shows',
        'media_content_type': 'spotify://current_user_saved_shows',
        'thumbnail': None,
        'title': 'Podcasts',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_recently_played',
        'media_content_type': 'spotify://current_user_recently_played',
        'thumbnail': None,
        'title': 'Recently played',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ARTIST: 'artist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_artists',
        'media_content_type': 'spotify://current_user_top_artists',
        'thumbnail': None,
        'title': 'Top Artists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_tracks',
        'media_content_type': 'spotify://current_user_top_tracks',
        'thumbnail': None,
        'title': 'Top Tracks',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.GENRE: 'genre'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/categories',
        'media_content_type': 'spotify://categories',
        'thumbnail': None,
        'title': 'Categories',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/featured_playlists',
        'media_content_type': 'spotify://featured_playlists',
        'thumbnail': None,
        'title': 'Featured Playlists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/new_releases',
        'media_content_type': 'spotify://new_releases',
        'thumbnail': None,
        'title': 'New Releases',
      }),
    ]),
    'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/library',
    'media_content_type': 'spotify://library',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Media Library',
  })
# ---
# name: test_browse_media_playlists[01J5TX5A0FF6G5V0QJX6HBC94T]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:4WkWJ0EjHEFASDevhM8oPw',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273d061f5bfae8d38558f3698c1',
        'title': 'Hyper',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:1RHirWgH1weMsBLi4KOK9d',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://mosaic.scdn.co/640/ab67616d0000b2732f3e58dd611d177973cb3a8cab67616d0000b27345cab965cb4639a4e669564aab67616d0000b2739e83c93811be6abfad8649d6ab67616d0000b273e4c03429788f0aff263a5fc6',
        'title': 'Ain’t got shit on me',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browse_media_playlists[32oesphrnacjcf7vw5bf6odx3]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3/spotify:playlist:4WkWJ0EjHEFASDevhM8oPw',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273d061f5bfae8d38558f3698c1',
        'title': 'Hyper',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3/spotify:playlist:1RHirWgH1weMsBLi4KOK9d',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://mosaic.scdn.co/640/ab67616d0000b2732f3e58dd611d177973cb3a8cab67616d0000b27345cab965cb4639a4e669564aab67616d0000b2739e83c93811be6abfad8649d6ab67616d0000b273e4c03429788f0aff263a5fc6',
        'title': 'Ain’t got shit on me',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browse_media_root
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': None,
        'media_class': <MediaClass.APP: 'app'>,
        'media_content_id': 'spotify://01J5TX5A0FF6G5V0QJX6HBC94T',
        'media_content_type': 'spotify://library',
        'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
        'title': 'spotify_1',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': None,
        'media_class': <MediaClass.APP: 'app'>,
        'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3',
        'media_content_type': 'spotify://library',
        'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
        'title': 'spotify_2',
      }),
    ]),
    'children_media_class': <MediaClass.APP: 'app'>,
    'media_class': <MediaClass.APP: 'app'>,
    'media_content_id': 'spotify://',
    'media_content_type': 'spotify',
    'not_shown': 0,
    'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
    'title': 'Spotify',
  })
# ---
# name: test_browsing[album-spotify:album:3IqzqH6ShrRtie9Yd2ODyG]
  dict({
    'can_expand': True,
    'can_play': True,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:6akJGriy4njdP8fZTPGjwz',
        'media_content_type': 'spotify://track',
        'thumbnail': None,
        'title': 'All Your Friends',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:7N02bJK1amhplZ8yAapRS5',
        'media_content_type': 'spotify://track',
        'thumbnail': None,
        'title': 'New Magiks',
      }),
    ]),
    'children_media_class': <MediaClass.TRACK: 'track'>,
    'media_class': <MediaClass.ALBUM: 'album'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:3IqzqH6ShrRtie9Yd2ODyG',
    'media_content_type': 'spotify://album',
    'not_shown': 0,
    'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273a61a28c2f084761f8833bce6',
    'title': 'SINGLARITY',
  })
# ---
# name: test_browsing[artist-spotify:artist:0TnOYISbd1XYRBk9myaseg]
  dict({
    'can_expand': True,
    'can_play': True,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:56jg3KJcYmfL7RzYmG2O1Q',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273a0bac1996f26274685db1520',
        'title': 'Trackhouse (Daytona 500 Edition)',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:1l86t4bTNT2j1X0ZBCIv6R',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b27333a4ba8f73271a749c5d953d',
        'title': 'Trackhouse',
      }),
    ]),
    'children_media_class': <MediaClass.ALBUM: 'album'>,
    'media_class': <MediaClass.ARTIST: 'artist'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:artist:0TnOYISbd1XYRBk9myaseg',
    'media_content_type': 'spotify://artist',
    'not_shown': 0,
    'thumbnail': 'https://i.scdn.co/image/ab6761610000e5ebee07b5820dd91d15d397e29c',
    'title': 'Pitbull',
  })
# ---
# name: test_browsing[categories-categories]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/0JQ5DAt0tbjZptfcdMSKl3',
        'media_content_type': 'spotify://category_playlists',
        'thumbnail': 'https://t.scdn.co/images/728ed47fc1674feb95f7ac20236eb6d7.jpeg',
        'title': 'Made For You',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/0JQ5DAqbMKFz6FAsUtgAab',
        'media_content_type': 'spotify://category_playlists',
        'thumbnail': 'https://t.scdn.co/images/728ed47fc1674feb95f7ac20236eb6d7.jpeg',
        'title': 'New Releases',
      }),
    ]),
    'children_media_class': <MediaClass.GENRE: 'genre'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/categories',
    'media_content_type': 'spotify://categories',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Categories',
  })
# ---
# name: test_browsing[category_playlists-dinner]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:37i9dQZF1DX7yhuKT9G4qk',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67706f0000000343319faa9428405f3312b588',
        'title': 'eten met vrienden',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:37i9dQZF1DXbvE0SE0Cczh',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67706f00000003b93c270883619dde61725fc8',
        'title': 'Jukebox Joint',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/dinner',
    'media_content_type': 'spotify://category_playlists',
    'not_shown': 0,
    'thumbnail': 'https://t.scdn.co/media/original/dinner_1b6506abba0ba52c54e6d695c8571078_274x274.jpg',
    'title': 'Cooking & Dining',
  })
# ---
# name: test_browsing[current_user_followed_artists-current_user_followed_artists]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:artist:0lLY20XpZ9yDobkbHI7u1y',
        'media_content_type': 'spotify://artist',
        'thumbnail': 'https://i.scdn.co/image/ab6761610000e5eb0fb1220e7e3ace47ebad023e',
        'title': 'Pegboard Nerds',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:artist:0p4nmQO2msCgU4IF37Wi3j',
        'media_content_type': 'spotify://artist',
        'thumbnail': 'https://i.scdn.co/image/ab6761610000e5eb5c3349ddba6b8e064c1bab16',
        'title': 'Avril Lavigne',
      }),
    ]),
    'children_media_class': <MediaClass.ARTIST: 'artist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_followed_artists',
    'media_content_type': 'spotify://current_user_followed_artists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Artists',
  })
# ---
# name: test_browsing[current_user_playlists-current_user_playlists]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:4WkWJ0EjHEFASDevhM8oPw',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273d061f5bfae8d38558f3698c1',
        'title': 'Hyper',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:1RHirWgH1weMsBLi4KOK9d',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://mosaic.scdn.co/640/ab67616d0000b2732f3e58dd611d177973cb3a8cab67616d0000b27345cab965cb4639a4e669564aab67616d0000b2739e83c93811be6abfad8649d6ab67616d0000b273e4c03429788f0aff263a5fc6',
        'title': 'Ain’t got shit on me',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browsing[current_user_recently_played-current_user_recently_played]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:71dMjqJ8UJV700zYs5YZCh',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273cdac047e7894fb56a0dfdcde',
        'title': 'Super Breath',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:71dMjqJ8UJV700zYs5YZCh',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273cdac047e7894fb56a0dfdcde',
        'title': 'Super Breath',
      }),
    ]),
    'children_media_class': <MediaClass.TRACK: 'track'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_recently_played',
    'media_content_type': 'spotify://current_user_recently_played',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Recently played',
  })
# ---
# name: test_browsing[current_user_saved_albums-current_user_saved_albums]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:57MSBg5pBQZH5bfLVDmeuP',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2733126a95bb7ed4146a80c7fc6',
        'title': 'In Waves',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:3DQueEd1Ft9PHWgovDzPKh',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2736b8a4828e057b7dc1c4a4d39',
        'title': 'ten days',
      }),
    ]),
    'children_media_class': <MediaClass.ALBUM: 'album'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_albums',
    'media_content_type': 'spotify://current_user_saved_albums',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Albums',
  })
# ---
# name: test_browsing[current_user_saved_shows-current_user_saved_shows]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.EPISODE: 'episode'>,
        'media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:show:5OzkclFjD6iAjtAuo7aIYt',
        'media_content_type': 'spotify://show',
        'thumbnail': 'https://i.scdn.co/image/ab6765630000f68db5f65a943ef4f707bf79949b',
        'title': 'Toni and Ryan',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.EPISODE: 'episode'>,
        'media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:show:6XYRres0KZtnTqKcLavWR2',
        'media_content_type': 'spotify://show',
        'thumbnail': 'https://i.scdn.co/image/ab6765630000f68d5fccb05c5685c081d5c2ad9c',
        'title': 'BLAST Push To Talk',
      }),
    ]),
    'children_media_class': <MediaClass.PODCAST: 'podcast'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_shows',
    'media_content_type': 'spotify://current_user_saved_shows',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Podcasts',
  })
# ---
# name: test_browsing[current_user_saved_tracks-current_user_saved_tracks]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:2pj2A25YQK4uMxhZheNx7R',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273ac9dd449e38e5e8952fd22ad',
        'title': 'Otherside',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:2lKOI1nwP5qZtZC7TGQVY8',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2733d710ab088ff797e80cc5aed',
        'title': 'I Think I Need A DJ',
      }),
    ]),
    'children_media_class': <MediaClass.TRACK: 'track'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_tracks',
    'media_content_type': 'spotify://current_user_saved_tracks',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Tracks',
  })
# ---
# name: test_browsing[current_user_top_artists-current_user_top_artists]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:artist:74Yus6IHfa3tWZzXXAYtS2',
        'media_content_type': 'spotify://artist',
        'thumbnail': 'https://i.scdn.co/image/ab6761610000e5ebf749f53f8bb5ffccf6105ce3',
        'title': 'Onkruid',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:artist:6s5ubAp65wXoTZefE01RNR',
        'media_content_type': 'spotify://artist',
        'thumbnail': 'https://i.scdn.co/image/ab6761610000e5eb8e750249623067fe3c557cf0',
        'title': 'Joost',
      }),
    ]),
    'children_media_class': <MediaClass.ARTIST: 'artist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_artists',
    'media_content_type': 'spotify://current_user_top_artists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Top Artists',
  })
# ---
# name: test_browsing[current_user_top_tracks-current_user_top_tracks]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:3oRoMXsP2NRzm51lldj1RO',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273c88e6a4447087f41eb388b14',
        'title': 'i like the way you kiss me',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:69zgu5rlAie3IPZOEXLxyS',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b27386f028311a5a746aa46b412f',
        'title': "Think I'm In Love With You (With Dua Lipa) (Live From The 59th ACM Awards)",
      }),
    ]),
    'children_media_class': <MediaClass.TRACK: 'track'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_tracks',
    'media_content_type': 'spotify://current_user_top_tracks',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Top Tracks',
  })
# ---
# name: test_browsing[featured_playlists-featured_playlists]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:37i9dQZF1DX4dopZ9vOp1t',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67706f000000037d14c267b8ee5fea2246a8fe',
        'title': 'Kerst Hits 2023',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:37i9dQZF1DWSBi5svWQ9Nk',
        'media_content_type': 'spotify://playlist',
        'thumbnail': 'https://i.scdn.co/image/ab67706f00000003f7b99051789611a49101c1cf',
        'title': 'Top Hits NL',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/featured_playlists',
    'media_content_type': 'spotify://featured_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Featured Playlists',
  })
# ---
# name: test_browsing[new_releases-new_releases]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:5SGtrmYbIo0Dsg4kJ4qjM6',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d00001e0209ba52a5116e0c3e8461f58b',
        'title': 'Moon Music',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:album:713lZ7AF55fEFSQgcttj9y',
        'media_content_type': 'spotify://album',
        'thumbnail': 'https://i.scdn.co/image/ab67616d00001e02ab9953b1d18f8233f6b26027',
        'title': 'drift',
      }),
    ]),
    'children_media_class': <MediaClass.ALBUM: 'album'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/new_releases',
    'media_content_type': 'spotify://new_releases',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'New Releases',
  })
# ---
# name: test_browsing[playlist-spotify:playlist:3cEYpjA9oz9GiPac4AsH4n]
  dict({
    'can_expand': True,
    'can_play': True,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:4rzfv0JLZfVhOhbSQ8o5jZ',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273ce6d0eef0c1ce77e5f95bbbc',
        'title': 'Api',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:5o3jMYOSbaVz3tkgwhELSV',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273aa2ff29970d9a63a49dfaeb2',
        'title': 'Is',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:4Cy0NHJ8Gh0xMdwyM9RkQm',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273ee0d0dce888c6c8a70db6e8b',
        'title': 'All I Want',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:6hvFrZNocdt2FcKGCSY5NI',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2738b7447ac3daa1da18811cf7b',
        'title': 'Endpoints',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:track:2E2znCPaS8anQe21GLxcvJ',
        'media_content_type': 'spotify://track',
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b27304e57d181ff062f8339d6c71',
        'title': 'You Are So Beautiful',
      }),
    ]),
    'children_media_class': <MediaClass.TRACK: 'track'>,
    'media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:3cEYpjA9oz9GiPac4AsH4n',
    'media_content_type': 'spotify://playlist',
    'not_shown': 0,
    'thumbnail': 'https://i.scdn.co/image/ab67706c0000da848d0ce13d55f634e290f744ba',
    'title': 'Spotify Web API Testing playlist',
  })
# ---
# name: test_browsing[show-spotify:show:1Y9ExMgMxoBVrgrfU7u0nD]
  dict({
    'can_expand': True,
    'can_play': True,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.EPISODE: 'episode'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:episode:3ssmxnilHYaKhwRWoBGMbU',
        'media_content_type': 'spotify://episode',
        'thumbnail': 'https://i.scdn.co/image/ab6765630000ba8af44e9ef63c2d6fb44cb0c9bf',
        'title': 'The Great War - Fallout Lorecast EP 1',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'children_media_class': None,
        'media_class': <MediaClass.EPISODE: 'episode'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:episode:1bbj9aqeeZ3UMUlcWN0S03',
        'media_content_type': 'spotify://episode',
        'thumbnail': 'https://i.scdn.co/image/ab6765630000ba8a655b54a66471089d27dbb03f',
        'title': 'Who Dropped the First Bomb?',
      }),
    ]),
    'children_media_class': <MediaClass.EPISODE: 'episode'>,
    'media_class': <MediaClass.PODCAST: 'podcast'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:show:1Y9ExMgMxoBVrgrfU7u0nD',
    'media_content_type': 'spotify://show',
    'not_shown': 0,
    'thumbnail': 'https://i.scdn.co/image/ab6765630000ba8ac7bedd27a4413b1abf926d8a',
    'title': 'Safety Third',
  })
# ---
